--- a/fourth_lab/Task_4/CMakeLists.txt
+++ b/fourth_lab/Task_4/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 3.17)
 project(lab_first LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
-add_executable(lab_first main.cpp)
+add_executable(lab_first main.cpp ../../fifth_lab/first/main.cpp ../../fifth_lab/first/task.cpp ../../fifth_lab/first/task.h)
 #set_target_properties(lab_first PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
