--- a/fifth_lab/first/CMakeLists.txt
+++ b/fifth_lab/first/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.17)
-project(lab_fifth LANGUAGES ASM CXX)
+project(lab_fifth LANGUAGESCXX)
 
 set(CMAKE_CXX_STANDARD 17)
-add_executable(lab_fifth main.cpp task.cpp ../second/main.cpp)
+add_executable(lab_fifth main.cpp task.cpp)
