--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -7,8 +7,10 @@ env:
 
 jobs:
   fifth_lab_first_task: 
-    runs-on: ubuntu
+    runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+         
       - name: Cmake configure
         working-directory: fifth_lab/first
         run: cmake -DCMAKE_BUILD_TYPE=Debug -G "CodeBlocks - Unix Makefiles" ./
